fixing weird glitch situation with image being too large

--- a/public/style.css
+++ b/public/style.css
@@ -123,6 +123,7 @@ img {
     width: 12%
 }
 .locateSection{
+    width: 100% ;
     height: 570px;
     background-color: #f7f7f7;
 }
